[gd_scene load_steps=7 format=3 uid="uid://tg3pjpm4gc8h"]

[ext_resource type="Script" path="res://scenes/ui/SettingsMenu.gd" id="1_ohjyr"]
[ext_resource type="Texture2D" uid="uid://b5am27ojapxol" path="res://assets/ui/menu_patch.png" id="1_x55um"]
[ext_resource type="LabelSettings" uid="uid://csvm34h65m0fr" path="res://scenes/ui/menu_title_style.tres" id="2_prqso"]
[ext_resource type="Texture2D" uid="uid://b4jrogl5u650n" path="res://assets/ui/x-btn.png" id="3_i4ty4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_he1mc"]
atlas = ExtResource("3_i4ty4")
region = Rect2(0, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_03lvy"]
atlas = ExtResource("3_i4ty4")
region = Rect2(27, 0, 27, 27)

[node name="SettingsMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ohjyr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_x55um")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_he1mc")
texture_hover = SubResource("AtlasTexture_03lvy")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = ExtResource("2_prqso")
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="MasterLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterAudio" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="SoundLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Effects Volume"

[node name="SoundEffects" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="MusicLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="Music" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/MasterAudio" to="." method="_on_master_audio_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SoundEffects" to="." method="_on_sound_effects_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
